# bloom-filter

./: CMakeLists.txt  README.md
lib/: bloom_filter
lib/bloom/: bloom_filter.hpp  byte_conv.hpp  hash_fn.hpp  salted_type.hpp
tests/: CMakeLists.txt  test_char.cpp  test_custom_struct.cpp  test_int.cpp  test_string.cpp
